mcs/mbas/Test/errors/DateLiteralsC6.vb
REM LineNo: 9
REM ExpectedError: BC31085
REM ErrorMessage: Date constant is not valid.

Module DateLiterals
    Sub Main()
        Dim d As Date
	
	d = # 25:05:07  #
   End Sub
End Module

	
	
